# disa

./: .gitignore  JSON_fields .json  README.md  merge.py  pyproject.toml
lookup-table/: JSON_fields.json  crops_lookup.json
patches/: patch_phone_amt_other.csv  patch_phone_amt_other.json
pipeline/: __init__.py  __main__.py  cleanup.py  cleanup_a10.py  cleanup_h1.py  cleanup_h3.py  cleanup_s4.py  merge.py  utils.py
pipeline/patch/: patchfile.py
rough_notebooks/: DISA_alldata_cleaning_english variables.txt  Merging.ipynb  regex_test.ipynb  scratchpad.ipynb  scratchpad2.ipynb  test.py
tests/: conftest.py
tests/pipeline/: test_utils.py
tests/pipeline/patch/: patchfile_example.json  test_patchfile.py
