[tool.poetry]
name = "disa"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
