[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
numpy = "^1.25.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
tabulate = "^0.9.0"
pdfdocument = "^4.0.0"
fpdf2 = "^2.7.4"
deepdiff = "^6.3.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipykernel = "^6.23.3"
notebook = "^6.5.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
